added listeners and eureka client. closes #8